update with css text effects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="https://www.bdrr.org/" target="_blank">Donate</a></li>
         </ul>
     </nav>
-    <h1>And Now, Introducing the world's worst watch dog!</h1>
+    <h1 class="fade-in-text">And Now, Introducing the world's worst watch dog!</h1>
     <section class="background-section">
         <!-- Content of the section -->
         <div class="luna">
