--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
           <li><a href="https://www.bdrr.org/" target="_blank">Donate</a></li>
         </ul>
       </nav>
-      <h1>So Who is this crazy dog?</h1>
+      <h1 class="fly-in-text">So Who is this crazy dog?</h1>
       <p>This is luna. She is about 6 years old and is a failed resucue</p>
       <p>Break in my house and suffer the rath of Luna</p>
     
