--- a/page2.html
+++ b/page2.html
@@ -18,6 +18,9 @@
       <h1 class="fly-in-text">So Who is this crazy dog?</h1>
       <p>This is luna. She is about 6 years old and is a failed resucue</p>
       <p>Break in my house and suffer the rath of Luna</p>
-    
+      <footer>
+        <p>&copy; 2023 Bad Dog Enterprises.. All rights reserved.</p>
+
+    </footer>
 </body>
 </html>
